--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,23 @@
 <link rel="apple-touch-icon" sizes="72x72" href="/img/favicons/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="/img/favicons/apple-touch-icon-114x114.png">
 
+    <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.10/webfont.js"></script>
+    <script type="text/javascript">
+      WebFont.load({
+     
+        // For google fonts
+        google: {
+          families: ['Droid Sans', 'Droid Serif']
+        }
+        // For early access or custom font
+        custom: {
+            families: ['Nanum Gothic'],
+            urls: ['http://fonts.googleapis.com/earlyaccess/nanumgothic.css']
+        }
+     
+      });
+    </script>
+
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
