--- a/public/css/base.css
+++ b/public/css/base.css
@@ -10,7 +10,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	font: inherit;
 	vertical-align: baseline;
 }
+p {
 
+  font-family: Nanum Gothic;
+}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section
 	{
 	display: block;
@@ -52,7 +55,7 @@ Typography
 ===================================================================================================*/
 h1,h2,h3,h4,h5,h6,strong,header,#clock strong,.button {
 	color: #fff;
-	font-family: 'BenchNine', sans-serif;
+	font-family: 'BenchNine', 'Nanum Gothic',sans-serif;
 	font-weight: normal;
 }
 
@@ -95,7 +98,7 @@ h6 {
 }
 
 p,.subscribe-box h6 {
-	font-family: 'Roboto Slab', serif;
+  font-family: Nanum Gothic;
 	font-size: 1.1em;
 	line-height: 1.6;
 	color: #555;
@@ -436,12 +439,13 @@ input[type="submit"] { -webkit-appearance:none; -webkit-border-radius:2px !impor
 
 .subscribe-box input#email-subscribe {
 	width: 60%;
-	background: rgba(255, 255, 255, 0.1);
-	border: solid 1px rgba(255, 255, 255, 0.1);
+	background: rgba(255, 255, 255, 0.5);
+	border: solid 1px rgba(255, 255, 255, 0.5);
 	float: left;
-	color: #fff;
+	color: #000;
 	padding: 10px;
 	margin-right: 5px;
+  font-family:'Nanum Gothic';
 }
 
 
@@ -581,7 +585,7 @@ section.contact {
 
 .contact h3 {
 	color: #222;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Nanum Gothic', serif;
 	font-size: 1.3em;
 	line-height: 24px;
 	margin: 0 0 10px 0;
